--- a/common.css
+++ b/common.css
@@ -2,6 +2,7 @@ body{
   text-align: center;
   font-size:xx-large;
   word-wrap:break-word;
+  overflow-y:hidden
 }
 p{margin: 0;display:inline;}
 .text{
@@ -31,7 +32,11 @@ input{
   border-color: #666;
 } */
 @keyframes text{
-  0%{opacity: 0;transform: scale(5);}
+  0%{opacity: 0;transform: scale(15);}
+  100%{opacity: 1;transform: scale(1);}
+}
+@-webkit-keyframes text{
+  0%{opacity: 0;transform: scale(15);}
   100%{opacity: 1;transform: scale(1);}
 }
 .cursor{
