--- a/common.css
+++ b/common.css
@@ -24,7 +24,7 @@ button{
 }
 
 /* ******************* view style */
-#view article{
+article#paper{
   background: #fff;
   width: 50%;
   min-width: 800px;
@@ -34,6 +34,17 @@ button{
   padding: .5em;
   text-align: left;
   box-shadow: 0 0 .1em #bbb;
+}
+article#congrats{
+  background: #fff;
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: 1em;
+  animation: quake .2s linear 0s infinite alternate;
 }
 p#word{
   background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAyAgMAAADglVkZAAAACVBMVEVra2vQ0ND////kRK62AAAAEElEQVQI12NoYKAtZGBwAADg4BhBJKyLoAAAAABJRU5ErkJggg==');
@@ -57,7 +68,9 @@ p#word{
   display:inline-block;
   height:1em;
   overflow:visible;
+  transform-origin: center bottom;
   animation:text .5s;
+  -webkit-transform-origin: center bottom;
   -webkit-animation:text .5s;
 }
 @keyframes text{
@@ -73,4 +86,12 @@ p#word{
   white-space: nowrap;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
+  animation: quake .1s linear 0s infinite alternate;
+}
+@keyframes quake{
+  0%{margin: 2px 0  0 1px;}
+  25%{margin: 1px 0 0 -2px;}
+  50%{margin: -2px 0 0 1px;}
+  75%{margin: -1px 0 0 2px;}
+  100%{margin: -1px 0 0 -2px;}
 }
