--- a/common.css
+++ b/common.css
@@ -34,6 +34,7 @@ article#paper{
   padding: .5em;
   text-align: left;
   box-shadow: 0 0 .1em #bbb;
+  -webkit-box-shadow: 0 0 .1em #bbb;
 }
 article#congrats{
   background: #fff;
@@ -45,6 +46,7 @@ article#congrats{
   top: 0;
   padding: 1em;
   animation: quake .2s linear 0s infinite alternate;
+  -webkit-animation: quake .2s linear 0s infinite alternate;
 }
 p#word{
   background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAyAgMAAADglVkZAAAACVBMVEVra2vQ0ND////kRK62AAAAEElEQVQI12NoYKAtZGBwAADg4BhBJKyLoAAAAABJRU5ErkJggg==');
@@ -87,8 +89,16 @@ p#word{
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   animation: quake .1s linear 0s infinite alternate;
+  -webkit-animation: quake .1s linear 0s infinite alternate;
 }
 @keyframes quake{
+  0%{margin: 2px 0  0 1px;}
+  25%{margin: 1px 0 0 -2px;}
+  50%{margin: -2px 0 0 1px;}
+  75%{margin: -1px 0 0 2px;}
+  100%{margin: -1px 0 0 -2px;}
+}
+@-webkit-keyframes quake{
   0%{margin: 2px 0  0 1px;}
   25%{margin: 1px 0 0 -2px;}
   50%{margin: -2px 0 0 1px;}
