--- a/common.css
+++ b/common.css
@@ -15,6 +15,7 @@ button{
   height: 3em;
   width: 3em;
   margin: .5em auto;
+  padding: 0;
   border: outset .5em #ddd;
   border-top: outset .25em #ddd;
   border-bottom: outset .3em #ddd;
@@ -26,11 +27,9 @@ button{
 /* ******************* view style */
 article#paper{
   background: #fff;
-  width: 50%;
-  min-width: 800px;
   left: 0;
   right: 0;
-  margin: 1em auto;
+  margin: 1em 10%;
   padding: .5em;
   text-align: left;
   box-shadow: 0 0 .1em #bbb;
@@ -80,8 +79,8 @@ p#word{
   100%{opacity: 1;transform: scale(1);}
 }
 @-webkit-keyframes text{
-  0%{opacity: 0;transform: scale(15);}
-  100%{opacity: 1;transform: scale(1);}
+  0%{opacity: 0;-webkit-transform: scale(15);}
+  100%{opacity: 1;-webkit-transform: scale(1);}
 }
 .vibes{
   position: fixed;
